// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridItem /> set the "id" prop on the Dom element 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id="hasId"
  />
</div>
`;

exports[`<GridItem /> spread the "attrs" prop on the Dom element 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
    tabIndex="-1"
  />
</div>
`;

exports[`<GridItem /> styles apply correct default rule styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct default rule styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct gutter styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct gutter styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:4rem}
.htz-g{padding-right:4rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct offset styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct offset styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{margin-right:25%}
.htz-i{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct rule styles when rule color is a string 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when rule color is a string 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is even 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is even 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is odd 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is odd 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles apply correct width styles (fixed width) 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct width styles (fixed width) 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:20rem}
.htz-c{flex-grow:0}
.htz-d{flex-shrink:0}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:0}"
`;

exports[`<GridItem /> styles apply correct width styles (relative width) 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct width styles (relative width) 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:25%}
.htz-c{flex-grow:0}
.htz-d{flex-shrink:0}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:0}"
`;

exports[`<GridItem /> styles create correct default styels 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles create correct default styels 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{-webkit-box-flex:1}"
`;

exports[`<GridItem /> styles set misc styles correctly 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles set misc styles correctly 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{flex-basis:auto}
.htz-c{flex-grow:1}
.htz-d{flex-shrink:1}
.htz-e{list-style:none}
.htz-f{padding-left:0rem}
.htz-g{padding-right:0rem}
.htz-h{background-color:red}
.htz-i{-webkit-box-flex:1}"
`;
